tests/fixtures/negative/17_private_access_failure/src/main.yc
import "secret" as secret

fn main() {
    secret.hidden()
}
